--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1431,7 +1431,7 @@ workflows:
         inputs:
         - content: |
             #!/usr/bin/env bash
-            # set -euxo pipefail
+            set -euxo pipefail
 
             DERIVED_DATA_DIR="/Users/vagrant/git/DerivedData"
             PROJECT="/Users/vagrant/git/firefox-ios/Client.xcodeproj"
@@ -1440,65 +1440,44 @@ workflows:
             DESTINATION="generic/platform=iOS"
             PRODUCTS_DIR="${DERIVED_DATA_DIR}/Build/Products"
             TEST_PLAN="${SCHEME}_PerformanceTestPlan"
-            
-            {
-                echo "-- build-for-testing --"
-                mkdir DerivedData
-                xcodebuild -resolvePackageDependencies -onlyUsePackageVersionsFromResolvedFile -project firefox-ios/Client.xcodeproj
-                xcodebuild build-for-testing -project "$PROJECT" \
-                    -scheme "$SCHEME" \
-                    -sdk "$SDK" \
-                    -destination "$DESTINATION" \
-                    -derivedDataPath "${DERIVED_DATA_DIR}"
-            } &> ./firefox-buildlog.log
 
-            echo "Build finished!"
-            head ./firefox-buildlog.log
-            tail ./firefox-buildlog.log
-            
-            LOG_FILE="/tmp/firebase_all_the_things.txt"
-            {
-                echo "-- verify build artifacts --"
-            
-                if [[ ! -d "$PRODUCTS_DIR" ]]; then
-                    echo "Error: $PRODUCTS_DIR was not created. Check your build steps and try again."
-                    exit 1
-                fi
+            echo "-- build-for-testing --"
+            mkdir DerivedData
+            xcodebuild -resolvePackageDependencies -onlyUsePackageVersionsFromResolvedFile -project firefox-ios/Client.xcodeproj
+            xcodebuild build-for-testing -project "$PROJECT" \
+                -scheme "$SCHEME" \
+                -sdk "$SDK" \
+                -destination "$DESTINATION" \
+                -derivedDataPath "${DERIVED_DATA_DIR}"
 
-                if [[ -z $(find "$PRODUCTS_DIR" -type f -name "${TEST_PLAN}*.xctestrun") ]]; then
-                    echo "Error: Missing $TEST_PLAN. Check your scheme and ensure the Test Plan is added."
-                    echo "The files in $PRODUCTS_DIR are:"
-                    ls -l "$PRODUCTS_DIR"
-                    echo "The available test plans for this scheme, $SCHEME, are:"
-                    awk '/<TestPlanReference/,/<\/TestPlanReference>/' \
-                        "${PROJECT}/xcshareddata/xcschemes/${SCHEME}.xcscheme" | \
-                        grep "reference" | \
-                        cut -d '"' -f 2 | \
-                        sed -n 's|container:Tests/\(.*\).xctestplan|\1|p'
-                    exit 1
-                fi
+            echo "-- verify build artifacts --"
 
-                if [[ ! -d "${PRODUCTS_DIR}/${SCHEME}-${SDK}" ]]; then
-                    echo "Error: Missing sdk for iPhone OS. Check your build sdk argument and try again."
-                    echo "The files in $PRODUCTS_DIR are:"
-                    ls -l "$PRODUCTS_DIR"
-                    echo "The available sdks in this environment are:"
-                    xcodebuild -showsdks | grep -E 'iphoneos|iphonesimulator'
-                    exit 1
-                fi
-            } &> "$LOG_FILE"
-            
-            # Upload the log file as an artifact
-            envman add --key LOG_FILE_PATH --value "$LOG_FILE"
-            echo "$LOG_FILE"
-            echo "$LOG_FILE_PATH"
-            head $LOG_FILE
-            tail $LOG_FILE
-    - deploy-to-bitrise-io@2.10.0:
-        title: Upload build log
-        is_always_run: true
-        inputs:
-        - deploy_path: "$LOG_FILE_PATH"
+            if [[ ! -d "$PRODUCTS_DIR" ]]; then
+                echo "Error: $PRODUCTS_DIR was not created. Check your build steps and try again."
+                exit 1
+            fi
+
+            if [[ -z $(find "$PRODUCTS_DIR" -type f -name "${TEST_PLAN}*.xctestrun") ]]; then
+                echo "Error: Missing $TEST_PLAN. Check your scheme and ensure the Test Plan is added."
+                echo "The files in $PRODUCTS_DIR are:"
+                ls -l "$PRODUCTS_DIR"
+                echo "The available test plans for this scheme, $SCHEME, are:"
+                awk '/<TestPlanReference/,/<\/TestPlanReference>/' \
+                    "${PROJECT}/xcshareddata/xcschemes/${SCHEME}.xcscheme" | \
+                    grep "reference" | \
+                    cut -d '"' -f 2 | \
+                    sed -n 's|container:Tests/\(.*\).xctestplan|\1|p'
+                exit 1
+            fi
+
+            if [[ ! -d "${PRODUCTS_DIR}/${SCHEME}-${SDK}" ]]; then
+                echo "Error: Missing sdk for iPhone OS. Check your build sdk argument and try again."
+                echo "The files in $PRODUCTS_DIR are:"
+                ls -l "$PRODUCTS_DIR"
+                echo "The available sdks in this environment are:"
+                xcodebuild -showsdks | grep -E 'iphoneos|iphonesimulator'
+                exit 1
+            fi
     - script@1.2.1:
         title: Create .zip artifact for Firebase Testing
         inputs:
