--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1493,7 +1493,7 @@ workflows:
 
             echo "-- create .zip artifact --"
             # do not double-quote $TEST_PLAN, as it is a wildcard and we need it to expand
-            ( cd "$PRODUCTS_DIR" && zip -r "${SCHEME}.zip" "${SCHEME}-${SDK}" ${TEST_PLAN}*.xctestrun )
+            ( cd "$PRODUCTS_DIR" && zip -r "${SCHEME}.zip" "${SCHEME}-iphoneos*" ${TEST_PLAN}*.xctestrun )
             mv "${PRODUCTS_DIR}/${SCHEME}.zip" "$TARGET_ARCHIVE"
     - cache-pull@2.7.2:
         inputs:
