feat: add nimbus flag

--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -15,6 +15,7 @@ channels:
 include:
   - nimbus-features/accountSettingsReduxFeature.yaml
   - nimbus-features/addressAutofillFeature.yaml
+  - nimbus-features/newAppearanceMenu.yaml
   - nimbus-features/appIconSelectionFeature.yaml
   - nimbus-features/autofillFeature.yaml
   - nimbus-features/bookmarkRefactorFeature.yaml
