Bugfix MTE-4379 Use 18.0 devices for bookmarks performance tests (#25312)
* Can we use 18.0 devices?

* Argh, iOS 18.0 is available on iPhone 14 instead

* Can we build for iPhone 15 Pro?

* Heh there's no iPhone 15 with iOS 18 on Bitrise

* iphoneos18.2 is available

* Build just for physical devices

* Debug compilation issues

* Remove debug code

* See the log *after* the code is compiled

* log all the things

* Always upload log!!!!

* Does the log exist?

* Do we fail somewhere else?

* Revert to "working" version

* we know FF compiles

* just say iphoneos

* put it back

* Just use "iphoneos"!

* just iphoneos

* no star? what is in $products_dir

* specify xcode version

* Try code sign

* code sign again

* Is this ready for main?

* Pull xcode version out to a different variable

* Remove ls

* :'( It's IOS version not XCODE version.

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1437,6 +1437,7 @@ workflows:
             PROJECT="/Users/vagrant/git/firefox-ios/Client.xcodeproj"
             SCHEME="Fennec_Enterprise"
             SDK="iphoneos"
+            IOS_VERSION="18.2"
             DESTINATION="generic/platform=iOS"
             PRODUCTS_DIR="${DERIVED_DATA_DIR}/Build/Products"
             TEST_PLAN="${SCHEME}_PerformanceTestPlan"
@@ -1446,7 +1447,7 @@ workflows:
             xcodebuild -resolvePackageDependencies -onlyUsePackageVersionsFromResolvedFile -project firefox-ios/Client.xcodeproj
             xcodebuild build-for-testing -project "$PROJECT" \
                 -scheme "$SCHEME" \
-                -sdk "$SDK" \
+                -sdk "$SDK$IOS_VERSION" \
                 -destination "$DESTINATION" \
                 -derivedDataPath "${DERIVED_DATA_DIR}"
 
@@ -1535,8 +1536,8 @@ workflows:
             TIMESTAMP=$(date "+%Y%m%d%H%M%S")
             RESULTS_DIR="firefox_ios_performance_tests_${TIMESTAMP}"
             GOOGLE_CLOUD_BUCKET="firefox_ios_test_artifacts"
-            DEVICE_MODEL="iphone14pro" # if updating device model and version, also update firebase-performance.kind
-            DEVICE_VERSION="16.6"
+            DEVICE_MODEL="iphone15pro" # if updating device model and version, also update firebase-performance.kind
+            DEVICE_VERSION="18.0"
             XCRESULT_PATH="gs://${GOOGLE_CLOUD_BUCKET}/${RESULTS_DIR}/${DEVICE_MODEL}-${DEVICE_VERSION}-en-portrait/TestLogs/"
             TARGET_ARCHIVE="/Users/vagrant/git/Fennec_Enterprise.zip" # this should be the same as the artifact created in the previous step
 
@@ -1547,6 +1548,7 @@ workflows:
 
             FIREBASE_TEST_RESULT=$($HOME/google-cloud-sdk/bin/gcloud firebase test ios run \
                 --test "$TARGET_ARCHIVE" \
+                --xcode-version=16.2 \
                 --device model="$DEVICE_MODEL",version="$DEVICE_VERSION" \
                 --client-details=matrixLabel="Bitrise" \
                 --num-flaky-test-attempts=2 \
