--- a/focus-ios/Widgets/Info.plist
+++ b/focus-ios/Widgets/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleShortVersionString</key>
-	<string>138.0</string>
+	<string>$(APP_VERSION)</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
