--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1418,14 +1418,14 @@ workflows:
         - project_path: firefox-ios/Client.xcodeproj
         - compile_bitcode: 'no'
         - upload_bitcode: 'no'
-        - team_id: 9G8J6YA743
+        - team_id: 3G74VUP3RV
         - export_method: development
         - distribution_method: development
-        - export_development_team: 9G8J6YA743
+        - export_development_team: 3G74VUP3RV
         - output_tool: xcodebuild
         - scheme: Fennec_Enterprise
         - configuration: Fennec_Enterprise
-        - xcconfig_content: ENABLE_DEBUG_DYLIB = NO
+        - xcconfig_content: ENABLE_DEBUG_DYLIB=NO
     - deploy-to-bitrise-io@2.10.0: {}
     - script@1.2.1:
         title: Firebase Build for Testing Physical Devices
@@ -1450,7 +1450,9 @@ workflows:
                 -scheme "$SCHEME" \
                 -sdk "$SDK$IOS_VERSION" \
                 -destination "$DESTINATION" \
-                -derivedDataPath "${DERIVED_DATA_DIR}"
+                -derivedDataPath "${DERIVED_DATA_DIR}" > xcodebuild.log # ignore the very long logs for now.
+
+            codesign -vvv --deep --strict "${DERIVED_DATA_DIR}/Client-*/Build/Products/*/Client.app"
 
             echo "-- verify build artifacts --"
 
