--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1418,10 +1418,10 @@ workflows:
         - project_path: firefox-ios/Client.xcodeproj
         - compile_bitcode: 'no'
         - upload_bitcode: 'no'
-        - team_id: 9G8J6YA743
+        - team_id: 3G74VUP3RV
         - export_method: development
         - distribution_method: development
-        - export_development_team: 9G8J6YA743
+        - export_development_team: 3G74VUP3RV
         - output_tool: xcodebuild
         - scheme: Fennec_Enterprise
         - configuration: Fennec_Enterprise
