--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,5 +109,5 @@ workflows:
           filters:
             branches:
               only: 
-                - /^.*mob-3113-firefox-upgrade-133.*/
+                - /^.*main.*/
           context: napps
