--- a/.github/workflows/merge_tests.yml
+++ b/.github/workflows/merge_tests.yml
@@ -2,7 +2,7 @@ name: Merge Unit Tests
 
 on:
   pull_request:
-    branches: [ main, mob-3113-firefox-upgrade-133 ]
+    branches: [main]
 
 jobs:
   execute_merge_tests:
