--- a/.github/workflows/swift_lint.yml
+++ b/.github/workflows/swift_lint.yml
@@ -1,7 +1,7 @@
 name: SwiftLint
 on:
   pull_request:
-    branches: [ main, mob-3113-firefox-upgrade-133 ]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
