Revert "Version bump 11.0.0 (#872)" (#874)
This reverts commit f8b75d644e9627214df63f80eb837f6dc4495a75.

--- a/.github/workflows/swift_lint.yml
+++ b/.github/workflows/swift_lint.yml
@@ -1,7 +1,7 @@
 name: SwiftLint
 on:
   pull_request:
-    branches: [main]
+    branches: [ main, mob-3113-firefox-upgrade-133 ]
 jobs:
   build:
     runs-on: ubuntu-latest
