--- a/.github/workflows/focus-ios-l10n-locales.yml
+++ b/.github/workflows/focus-ios-l10n-locales.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Run setup scripts for Focus
         run: |
           ./checkout.sh
+      - name: Install fastlane
+        run: |
+          gem install fastlane -v 2.227.0
       - name: Fetch derived data
         id: download-derived-data
         uses: actions/download-artifact@v4
