--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1451,7 +1451,7 @@ workflows:
                 -sdk "$SDK$IOS_VERSION" \
                 -destination "$DESTINATION" \
                 -derivedDataPath "${DERIVED_DATA_DIR}" \
-                "ENABLE_DEBUG_DYLIB=NO"
+                ENABLE_DEBUG_DYLIB=NO
 
             echo "-- verify build artifacts --"
 
