change trigger for release branch

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2182,7 +2182,7 @@ trigger_map:
   pipeline: pipeline_build_and_test
 - push_branch: epic-branch/*
   pipeline: pipeline_build_and_test
-- push_branch: release/v138
+- push_branch: release/*
   pipeline: pipeline_build_and_test
 - pull_request_target_branch: main
   pipeline: pipeline_build_and_test
