--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -4387,6 +4387,41 @@ tabs:
       - fx-ios-data-stewards@mozilla.com
     expires: never
 
+# Toasts
+toasts.close_single_tab:
+  undo_selected:
+    type: event
+    description: | 
+      Records when the user selects undo after closing a tab.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11714
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/25029
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - Toasts
+        - TabPanel
+
+toasts.close_all_tabs:
+  undo_selected:
+    type: event
+    description: | 
+      Records when the user selects undo after closing all tabs.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11714
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/25029
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - Toasts
+        - TabPanel
+  
 # Enhanced Tracking Protection metrics
 tracking_protection:
   enabled:
