--- a/firefox-ios/Client/tags.yaml
+++ b/firefox-ios/Client/tags.yaml
@@ -21,8 +21,8 @@ TopSites:
   description: Corresponds to the [Feature:TopSites](https://mozilla-hub.atlassian.net/browse/FXIOS-3464)
     label on GitHub.
   
-TabPanel:
-  description: Corresponds to all things related to all things related to the tab panel.
+TabsPanel:
+  description: Corresponds to all things related to the tab panel.
 
 Toasts:
   description: Corresponds to any events around toasts in the app. Toasts are the shortlived banners that 
