--- a/firefox-ios/Client/tags.yaml
+++ b/firefox-ios/Client/tags.yaml
@@ -14,6 +14,12 @@ $schema: moz://mozilla.org/schemas/glean/tags/1-0-0
 AppIconSelection:
   description: Corresponds to the feature where users can change their default app icon in the settings.
 
+Library:
+  description: Corresponds to library, containing bookmarks, history, reading list, and downloads.
+
+HistoryPanel:
+  description: Corresponds to the history panel of the library.
+
 Settings:
   description: Corresponds to all the options encompassed in the app's settings screens.
 
