yes we need to git checkout

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1640,6 +1640,9 @@ workflows:
             python3 perfTestTransform.py
 
   Firefox_Unit_Tests:
+    before_run:
+    - 0_detect_standalone_build
+    - 1_git_clone_and_post_clone
     steps:
     - script@1.2.1:
         title: Build for Testing
