--- a/firefox-ios/Client/tags.yaml
+++ b/firefox-ios/Client/tags.yaml
@@ -23,3 +23,10 @@ Settings:
 TopSites:
   description: Corresponds to the [Feature:TopSites](https://mozilla-hub.atlassian.net/browse/FXIOS-3464)
     label on GitHub.
+  
+TabsPanel:
+  description: Corresponds to all things related to the tab panel.
+
+Toasts:
+  description: Corresponds to any events around toasts in the app. Toasts are the shortlived banners that 
+    appear when an action is taken.
