[MOB-3030] Investigate Flaky Tests (#881)
* [MOB-3030] Update TrackMenuStatus test

* [MOB-3030] Review TestPlan

* [MOB-3030] Skipping `TestBrowserDB\/testMovesDB()` as Firefox mentioned

* [MOB-3030] Swift lint check

* [MOB-3030] Fix whole TabManagerTests

* [MOB-3030] Force tests run against feature branch

* [MOB-3030] Small referral update with `.init()`

* [MOB-3030] Remove `FirefoxViewModelTests` as not needed.

`EcosiaHomeViewModelTests` replaces it entirely. Reset the `FirefoxHomeViewModelTests` to minimise conflicts.

* [MOB-3030] Cleanup `EcosiaHomeViewModelTests`

Add the `User.shared = User()` to reset `showClimateImpact` and sets it to `true` so that the shown sections are always matching, as well as the `ntpCustomization`

* [MOB-3030] Revert changes on creating subject on main thread

* [MOB-3030] Skip flaky `TabManagerTests`

* [MOB-3030] Revert "[MOB-3030] Skip flaky `TabManagerTests`"

This reverts commit 05cc0d0bdb98d1e3d31bf5112b5b61de230cf4f5.

* [MOB-3030] Add `@MainActor` to all `TabManagerTests`

* [MOB-3030] Bugfix FXIOS-10853 #23668 Flaky history unit tests  (#24455)

I hate dates in unit tests
# Conflicts:
#	firefox-ios/firefox-ios-tests/Tests/ClientTests/Library/HistoryPanelViewModelTests.swift

* [MOB-3030] Remove `fail_build` as it matches its default value

* [MOB-3030] Remove `disable_concurrent_testing` flag to reset it to `false`

* [MOB-3030] Add `number_of_retries` to mitigate flaky tests

* [MOB-3030] Let the build continue if the tests fail

So that we can gather test results

* [MOB-3030] Revert "[MOB-3030] Let the build continue if the tests fail"

This reverts commit 8eaf062488ebb595b60ae5aacc6b643878fc141b.

* [MOB-3030] Run test report publishing regardless of test outcome

* [MOB-3030] Revert "[MOB-3030] Remove `disable_concurrent_testing` flag to reset it to `false`"

This reverts commit ba9a78327ccf0849df8284375bad9f9f050ff243.

# Conflicts:
#	fastlane/Scanfile

* [MOB-3030] Add `@MainActor` to more `TabManagerTests`



--- a/.github/actions/perform_unit_tests/action.yml
+++ b/.github/actions/perform_unit_tests/action.yml
@@ -16,6 +16,7 @@ runs:
         bundle exec fastlane run run_tests prelaunch_simulator:true
 
     - name: Publish Test Report
+      if: always()
       uses: mikepenz/action-junit-report@v3.7.6
       with:
         report_paths: '**/test_output/xml/report.junit'
