Add FXIOS Backport branch for 137.1 (#25767)
* Bugfix FXIOS-11430 [Image Blocker] Inject image blocker in all frames instead of hiding iframes (#25524)

* chore: inject NoImageMode in all frames

* fix: don't hide iframes only images now that script is injected in all frames

(cherry picked from commit 9f6d45bd05c4a1f2e3b06c2ec69b982b67a9798f)

* Bugfix FXIOS-11536 usage-deletion-request ping is missing the required usage profile_id metric field in some pings (#25282)

* FXIOS-11536 usage-deletion-request ping is missing the required usage.profile_id metric field in some pings

* Move Glean init

(cherry picked from commit e18ce70dfa40f3ae1839b5a4a187ecab3afc1a05)

* Bugfix  [Toolbar Refactor] FXIOS wrong icon in landscape mode and fix Voice over behavior (#25564)

* Fix voice over for clear button and fix menu icon for landscape view

* Restore baseline layout

* Remove unused code

* Refactor as per code review

---------

Co-authored-by: Filippo <fzazzeroni@mozilla.com>
(cherry picked from commit 8e58f5adc0aaaf984fc08adda36519de89ac4ab6)

* Bugfix FXIOS-11722 - [Toolbar UI Experiments] - Toolbar is moved to bottom after activating the experiment (#25598)

* Set button in onboarding by default to bottom toolbar

* Improve readability.

* Fix indentation

(cherry picked from commit 53b2175519896284aa48c954404b7b63d601467d)

* Bugfix [Deeplink optimization] FXIOS-11269 ensure tab restoration is called after deeplink handling (#25620)

* Fix deeplinks not being handled correctly

* Remove test

---------

Co-authored-by: Filippo <fzazzeroni@mozilla.com>
(cherry picked from commit dbcf4ec84f84a4922446f9d7189e90f80c9d3a56)

* Bugfix [Toolbar Experiment] FXIOS-11730 Web view freezes when pressed stop loading button (#25602)

* fix web view freeze after stop loading website

* Set progress bar to 0.0 when stopping url loading

* Refactor as per code review

---------

Co-authored-by: Filippo <fzazzeroni@mozilla.com>
(cherry picked from commit e3ac7e93460f8d205ae24f1cd9bc

--- a/firefox-ios/nimbus-features/tabAnimationFeature.yaml
+++ b/firefox-ios/nimbus-features/tabAnimationFeature.yaml
@@ -1,12 +1,12 @@
-# The configuration for the tabTrayUIExperiments feature
+# The configuration for the tabAnimationFeature feature
 features:
-  tab-tray-ui-experiments:
+  tab-animation-feature:
     description: >
-      The tab tray will undergo some UI experimentation to test potential improvements.
+      An animation for when presenting or dismissing the the tab tray.
     variables:
       enabled:
         description: >
-          If true, enables the tab tray UI experiments.
+          If true, enables the animation.
         type: Boolean
         default: false
     defaults:
