Add FXIOS-11526 [Homepage] [Telemetry] event for tapping on items

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -2715,6 +2715,32 @@ firefox_home_page:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-07-01"
 
+# HomePage - General
+homepage:
+  item_tapped:
+    type: event
+    description: |
+      Records when an item has been tapped on the homepage.
+    extra_keys:
+      section:
+       type: string
+       description: |
+        The section that the item belongs to on the homepage. This section name is found in `HomepageTelemetry.TappedItemType` under `sectionName`.
+      type:
+       type: string
+       description: |
+        The type of item that was tapped on the homepage. This name is found in `HomepageTelemetry.TappedItemType`.
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/11526
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/25297
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+    metadata:
+      tags:
+        - Homepage
+
 # Metrics related to the history panel of the library
 library:
   panel_pressed:
