--- a/firefox-ios/Client/tags.yaml
+++ b/firefox-ios/Client/tags.yaml
@@ -11,6 +11,9 @@
 ---
 $schema: moz://mozilla.org/schemas/glean/tags/1-0-0
 
+Homepage:
+  description: Corresponds to the homepage feature and all content that resides on the page.
+
 AppIconSelection:
   description: Corresponds to the feature where users can change their default app icon in the settings.
 
