--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -592,6 +592,70 @@ bookmarks:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-07-01"
 
+# Context menus
+context_menu:
+  option_selected:
+    type: event
+    description: |
+      Records when the user selects an option from a context menu.
+    extra_keys:
+      option:
+        type: string
+        description: |
+          The type of option selected.
+      origin:
+        type: string
+        description: |
+          The type of context menu the option was selected from.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11798
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/25805
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - ContextMenu
+  shown:
+    type: event
+    description: |
+      Records when a context menu is shown.
+    extra_keys:
+      origin:
+        type: string
+        description: |
+          The type of context menu the option was selected from.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11798
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/25805
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - ContextMenu
+  dismissed:
+    type: event
+    description: |
+      Records when a context menu is dismissed.
+    extra_keys:
+      origin:
+        type: string
+        description: |
+          The type of context menu the option was selected from.
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11798
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/25805
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-06-01"
+    metadata:
+      tags:
+        - ContextMenu
+
 # Default browser card metrics
 default_browser_card:
   dismiss_pressed:
