--- a/firefox-ios/nimbus-features/tabTrayUIExperiments.yaml
+++ b/firefox-ios/nimbus-features/tabTrayUIExperiments.yaml
@@ -9,11 +9,18 @@ features:
           If true, enables the tab tray UI experiments.
         type: Boolean
         default: false
+      animation-feature:
+        description: >
+          If true, enabes the tab tray animation feature.
+        type: Boolean
+        default: false
     defaults:
       - channel: beta
         value:
           enabled: false
+          animation-feature: false
       - channel: developer
         value:
           enabled: false
+          animation-feature: false
 
